WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
271799
Log quiet activities when throttler is forced to invalidate all activities
https://bugs.webkit.org/show_bug.cgi?id=271799
Summary
Log quiet activities when throttler is forced to invalidate all activities
Ben Nham
Reported
2024-03-27 14:40:09 PDT
We have had various bugs where an async IPC starts but never finishes, causing the process to stay alive for up to 30 seconds after it is supposed to actually suspend (e.g.
274157@main
). Up to now, those async IPCs start quiet background activities, which log nothing when we are forced to invalidate all activities. Make these types of bugs easier to debug in the future by logging quiet activities in ProcessThrottler::invalidateAllActivities.
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2024-03-27 14:40:21 PDT
<
rdar://problem/125510942
>
Ben Nham
Comment 2
2024-03-27 14:43:28 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/26533
EWS
Comment 3
2024-03-28 10:12:40 PDT
Committed
276783@main
(e69d18ce5564): <
https://commits.webkit.org/276783@main
> Reviewed commits have been landed. Closing PR #26533 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug