Source/WebKit/UIProcess/ProcessThrottler.h
@@ -50,6 +50,7 @@ enum ProcessSuppressionDisabledCounterType { };
 using ProcessSuppressionDisabledCounter = RefCounter<ProcessSuppressionDisabledCounterType>;
 using ProcessSuppressionDisabledToken = ProcessSuppressionDisabledCounter::Token;
 
+enum class IsQuietActivity : bool { No, Yes };
 enum class IsSuspensionImminent : bool { No, Yes };
 enum class ProcessThrottleState : uint8_t { Suspended, Background, Foreground };
 enum class ProcessThrottlerActivityType : bool { Background, Foreground };
@@ -58,28 +59,30 @@ class ProcessThrottlerActivity : public CanMakeWeakPtr<ProcessThrottlerActivity>
     WTF_MAKE_FAST_ALLOCATED;
     WTF_MAKE_NONCOPYABLE(ProcessThrottlerActivity);
 public:
-    ProcessThrottlerActivity(ProcessThrottler&, ASCIILiteral name, ProcessThrottlerActivityType);
+    ProcessThrottlerActivity(ProcessThrottler&, ASCIILiteral name, ProcessThrottlerActivityType, IsQuietActivity);
 
     ~ProcessThrottlerActivity()
     {
         ASSERT(isMainRunLoop());
         if (isValid())
-            invalidate();
+            invalidate(ForceEnableActivityLogging::No);
     }
 
     bool isValid() const { return !!m_throttler; }
     ASCIILiteral name() const { return m_name; }
-    bool isQuietActivity() const { return m_name.isNull(); }
+    bool isQuietActivity() const { return m_isQuietActivity == IsQuietActivity::Yes; }
     bool isForeground() const { return m_type != ProcessThrottlerActivityType::Background; }
 
 private:
     friend class ProcessThrottler;
 
-    void invalidate();
+    enum class ForceEnableActivityLogging : bool { No, Yes };
+    void invalidate(ForceEnableActivityLogging);
 
     WeakPtr<ProcessThrottler> m_throttler;
     ASCIILiteral m_name;
     ProcessThrottlerActivityType m_type;
+    IsQuietActivity m_isQuietActivity;
 };
 
 class ProcessThrottlerTimedActivity {
@@ -117,6 +120,7 @@ public:
 
     using BackgroundActivity = Activity;
     UniqueRef<Activity> backgroundActivity(ASCIILiteral name);
+    UniqueRef<Activity> quietBackgroundActivity(ASCIILiteral name);
 
     static bool isValidBackgroundActivity(const ActivityVariant&);
     static bool isValidForegroundActivity(const ActivityVariant&);
@@ -186,12 +190,17 @@ private:
 
 inline auto ProcessThrottler::foregroundActivity(ASCIILiteral name) -> UniqueRef<Activity>
 {
-    return makeUniqueRef<Activity>(*this, name, ProcessThrottlerActivityType::Foreground);
+    return makeUniqueRef<Activity>(*this, name, ProcessThrottlerActivityType::Foreground, IsQuietActivity::No);
 }
 
 inline auto ProcessThrottler::backgroundActivity(ASCIILiteral name) -> UniqueRef<Activity>
 {
-    return makeUniqueRef<Activity>(*this, name, ProcessThrottlerActivityType::Background);
+    return makeUniqueRef<Activity>(*this, name, ProcessThrottlerActivityType::Background, IsQuietActivity::No);
+}
+
+inline auto ProcessThrottler::quietBackgroundActivity(ASCIILiteral name) -> UniqueRef<Activity>
+{
+    return makeUniqueRef<Activity>(*this, name, ProcessThrottlerActivityType::Background, IsQuietActivity::Yes);
 }
 
 WTF::TextStream& operator<<(WTF::TextStream&, const ProcessThrottler&);
